--- a/src/index.html
+++ b/src/index.html
@@ -60,34 +60,252 @@
         <ul class="nav-main">
           <li class="nav-main__item">
             <a href="#" class="nav-main__link">Art</a>
+            <ul class="dropdown dropdown_hidden">
+              <li class="dropdown-item">
+                <img class="dropdown-item__img" src="img/dropdown-item.jpg">
+                <h3 class="dropdown-item__title">Item name here</h3>
+                <p class="dropdown-item__description">Lorem Ipsum is simply
+                  dummy text of the</p> 
+                <a class="dropdown-item__btn" href="#">More detail</a>
+              </li>
+              <li class="dropdown-item dropdown-item_maverick">
+                <img class="dropdown-item__img" src="img/dropdown-item.jpg">
+                <h3 class="dropdown-item__title">Item name here</h3>
+                <p class="dropdown-item__description">Lorem Ipsum is simply
+                  dummy text of the</p> 
+                <a class="dropdown-item__btn" href="#">More detail</a>
+              </li>
+              <li class="dropdown-item">
+                <img class="dropdown-item__img" src="img/dropdown-item.jpg">
+                <h3 class="dropdown-item__title">Item name here</h3>
+                <p class="dropdown-item__description">Lorem Ipsum is simply
+                  dummy text of the</p> 
+                <a class="dropdown-item__btn" href="#">More detail</a>
+              </li>
+              <li><a class="dropdown__link" href="#">See all items</a></li>
+            </ul>
           </li>
           <li class="nav-main__item">
             <a href="#" class="nav-main__link">Home & living</a>
+            <ul class="dropdown dropdown_hidden">
+              <li class="dropdown-item">
+                <img class="dropdown-item__img" src="img/dropdown-item.jpg">
+                <h3 class="dropdown-item__title">Item name here</h3>
+                <p class="dropdown-item__description">Lorem Ipsum is simply
+                  dummy text of the</p> 
+                <a class="dropdown-item__btn" href="#">More detail</a>
+              </li>
+              <li class="dropdown-item dropdown-item_maverick">
+                <img class="dropdown-item__img" src="img/dropdown-item.jpg">
+                <h3 class="dropdown-item__title">Item name here</h3>
+                <p class="dropdown-item__description">Lorem Ipsum is simply
+                  dummy text of the</p> 
+                <a class="dropdown-item__btn" href="#">More detail</a>
+              </li>
+              <li class="dropdown-item">
+                <img class="dropdown-item__img" src="img/dropdown-item.jpg">
+                <h3 class="dropdown-item__title">Item name here</h3>
+                <p class="dropdown-item__description">Lorem Ipsum is simply
+                  dummy text of the</p> 
+                <a class="dropdown-item__btn" href="#">More detail</a>
+              </li>
+              <li><a class="dropdown__link" href="#">See all items</a></li>
+            </ul>
           </li>
           <li class="nav-main__item">
             <a href="#" class="nav-main__link">Jewelry</a>
+            <ul class="dropdown dropdown_hidden">
+              <li class="dropdown-item">
+                <img class="dropdown-item__img" src="img/dropdown-item.jpg">
+                <h3 class="dropdown-item__title">Item name here</h3>
+                <p class="dropdown-item__description">Lorem Ipsum is simply
+                  dummy text of the</p> 
+                <a class="dropdown-item__btn" href="#">More detail</a>
+              </li>
+              <li class="dropdown-item dropdown-item_maverick">
+                <img class="dropdown-item__img" src="img/dropdown-item.jpg">
+                <h3 class="dropdown-item__title">Item name here</h3>
+                <p class="dropdown-item__description">Lorem Ipsum is simply
+                  dummy text of the</p> 
+                <a class="dropdown-item__btn" href="#">More detail</a>
+              </li>
+              <li class="dropdown-item">
+                <img class="dropdown-item__img" src="img/dropdown-item.jpg">
+                <h3 class="dropdown-item__title">Item name here</h3>
+                <p class="dropdown-item__description">Lorem Ipsum is simply
+                  dummy text of the</p> 
+                <a class="dropdown-item__btn" href="#">More detail</a>
+              </li>
+              <li><a class="dropdown__link" href="#">See all items</a></li>
+            </ul>
           </li>
           <li class="nav-main__item">
             <a href="#" class="nav-main__link">Women</a>
+            <ul class="dropdown dropdown_hidden">
+              <li class="dropdown-item">
+                <img class="dropdown-item__img" src="img/dropdown-item.jpg">
+                <h3 class="dropdown-item__title">Item name here</h3>
+                <p class="dropdown-item__description">Lorem Ipsum is simply
+                  dummy text of the</p> 
+                <a class="dropdown-item__btn" href="#">More detail</a>
+              </li>
+              <li class="dropdown-item dropdown-item_maverick">
+                <img class="dropdown-item__img" src="img/dropdown-item.jpg">
+                <h3 class="dropdown-item__title">Item name here</h3>
+                <p class="dropdown-item__description">Lorem Ipsum is simply
+                  dummy text of the</p> 
+                <a class="dropdown-item__btn" href="#">More detail</a>
+              </li>
+              <li class="dropdown-item">
+                <img class="dropdown-item__img" src="img/dropdown-item.jpg">
+                <h3 class="dropdown-item__title">Item name here</h3>
+                <p class="dropdown-item__description">Lorem Ipsum is simply
+                  dummy text of the</p> 
+                <a class="dropdown-item__btn" href="#">More detail</a>
+              </li>
+              <li><a class="dropdown__link" href="#">See all items</a></li>
+            </ul>
           </li>
           <li class="nav-main__item">
             <a href="#" class="nav-main__link">Men</a>
+            <ul class="dropdown dropdown_hidden">
+              <li class="dropdown-item">
+                <img class="dropdown-item__img" src="img/dropdown-item.jpg">
+                <h3 class="dropdown-item__title">Item name here</h3>
+                <p class="dropdown-item__description">Lorem Ipsum is simply
+                  dummy text of the</p> 
+                <a class="dropdown-item__btn" href="#">More detail</a>
+              </li>
+              <li class="dropdown-item dropdown-item_maverick">
+                <img class="dropdown-item__img" src="img/dropdown-item.jpg">
+                <h3 class="dropdown-item__title">Item name here</h3>
+                <p class="dropdown-item__description">Lorem Ipsum is simply
+                  dummy text of the</p> 
+                <a class="dropdown-item__btn" href="#">More detail</a>
+              </li>
+              <li class="dropdown-item">
+                <img class="dropdown-item__img" src="img/dropdown-item.jpg">
+                <h3 class="dropdown-item__title">Item name here</h3>
+                <p class="dropdown-item__description">Lorem Ipsum is simply
+                  dummy text of the</p> 
+                <a class="dropdown-item__btn" href="#">More detail</a>
+              </li>
+              <li><a class="dropdown__link" href="#">See all items</a></li>
+            </ul>
           </li>
           <li class="nav-main__item">
             <a href="#" class="nav-main__link">Kids</a>
+            <ul class="dropdown dropdown_hidden">
+              <li class="dropdown-item">
+                <img class="dropdown-item__img" src="img/dropdown-item.jpg">
+                <h3 class="dropdown-item__title">Item name here</h3>
+                <p class="dropdown-item__description">Lorem Ipsum is simply
+                  dummy text of the</p> 
+                <a class="dropdown-item__btn" href="#">More detail</a>
+              </li>
+              <li class="dropdown-item dropdown-item_maverick">
+                <img class="dropdown-item__img" src="img/dropdown-item.jpg">
+                <h3 class="dropdown-item__title">Item name here</h3>
+                <p class="dropdown-item__description">Lorem Ipsum is simply
+                  dummy text of the</p> 
+                <a class="dropdown-item__btn" href="#">More detail</a>
+              </li>
+              <li class="dropdown-item">
+                <img class="dropdown-item__img" src="img/dropdown-item.jpg">
+                <h3 class="dropdown-item__title">Item name here</h3>
+                <p class="dropdown-item__description">Lorem Ipsum is simply
+                  dummy text of the</p> 
+                <a class="dropdown-item__btn" href="#">More detail</a>
+              </li>
+              <li><a class="dropdown__link" href="#">See all items</a></li>
+            </ul>
           </li>
           <li class="nav-main__item">
             <a href="#" class="nav-main__link">Vintage</a>
+            <ul class="dropdown dropdown_hidden">
+              <li class="dropdown-item">
+                <img class="dropdown-item__img" src="img/dropdown-item.jpg">
+                <h3 class="dropdown-item__title">Item name here</h3>
+                <p class="dropdown-item__description">Lorem Ipsum is simply
+                  dummy text of the</p> 
+                <a class="dropdown-item__btn" href="#">More detail</a>
+              </li>
+              <li class="dropdown-item dropdown-item_maverick">
+                <img class="dropdown-item__img" src="img/dropdown-item.jpg">
+                <h3 class="dropdown-item__title">Item name here</h3>
+                <p class="dropdown-item__description">Lorem Ipsum is simply
+                  dummy text of the</p> 
+                <a class="dropdown-item__btn" href="#">More detail</a>
+              </li>
+              <li class="dropdown-item">
+                <img class="dropdown-item__img" src="img/dropdown-item.jpg">
+                <h3 class="dropdown-item__title">Item name here</h3>
+                <p class="dropdown-item__description">Lorem Ipsum is simply
+                  dummy text of the</p> 
+                <a class="dropdown-item__btn" href="#">More detail</a>
+              </li>
+              <li><a class="dropdown__link" href="#">See all items</a></li>
+            </ul>
           </li>
           <li class="nav-main__item">
             <a href="#" class="nav-main__link">Weddings</a>
+            <ul class="dropdown dropdown_hidden">
+              <li class="dropdown-item">
+                <img class="dropdown-item__img" src="img/dropdown-item.jpg">
+                <h3 class="dropdown-item__title">Item name here</h3>
+                <p class="dropdown-item__description">Lorem Ipsum is simply
+                  dummy text of the</p> 
+                <a class="dropdown-item__btn" href="#">More detail</a>
+              </li>
+              <li class="dropdown-item dropdown-item_maverick">
+                <img class="dropdown-item__img" src="img/dropdown-item.jpg">
+                <h3 class="dropdown-item__title">Item name here</h3>
+                <p class="dropdown-item__description">Lorem Ipsum is simply
+                  dummy text of the</p> 
+                <a class="dropdown-item__btn" href="#">More detail</a>
+              </li>
+              <li class="dropdown-item">
+                <img class="dropdown-item__img" src="img/dropdown-item.jpg">
+                <h3 class="dropdown-item__title">Item name here</h3>
+                <p class="dropdown-item__description">Lorem Ipsum is simply
+                  dummy text of the</p> 
+                <a class="dropdown-item__btn" href="#">More detail</a>
+              </li>
+              <li><a class="dropdown__link" href="#">See all items</a></li>
+            </ul>
           </li>
           <li class="nav-main__item">
             <a href="#" class="nav-main__link">More</a>
+            <ul class="dropdown dropdown_hidden">
+              <li class="dropdown-item">
+                <img class="dropdown-item__img" src="img/dropdown-item.jpg">
+                <h3 class="dropdown-item__title">Item name here</h3>
+                <p class="dropdown-item__description">Lorem Ipsum is simply
+                  dummy text of the</p> 
+                <a class="dropdown-item__btn" href="#">More detail</a>
+              </li>
+              <li class="dropdown-item dropdown-item_maverick">
+                <img class="dropdown-item__img" src="img/dropdown-item.jpg">
+                <h3 class="dropdown-item__title">Item name here</h3>
+                <p class="dropdown-item__description">Lorem Ipsum is simply
+                  dummy text of the</p> 
+                <a class="dropdown-item__btn" href="#">More detail</a>
+              </li>
+              <li class="dropdown-item">
+                <img class="dropdown-item__img" src="img/dropdown-item.jpg">
+                <h3 class="dropdown-item__title">Item name here</h3>
+                <p class="dropdown-item__description">Lorem Ipsum is simply
+                  dummy text of the</p> 
+                <a class="dropdown-item__btn" href="#">More detail</a>
+              </li>
+              <li><a class="dropdown__link" href="#">See all items</a></li>
+            </ul>
           </li>
         </ul>
       </nav>
     </header>
   </div>
+
+  <script src="script.min.js"></script>
 </body>
 </html>       
