--- a/src/index.html
+++ b/src/index.html
@@ -56,7 +56,7 @@
         </div>
       </div>
 
-      <nav>
+      <nav class="nav">
         <ul class="nav-main">
           <li class="nav-main__item">
             <a href="#" class="nav-main__link">Art</a>
@@ -304,6 +304,51 @@
         </ul>
       </nav>
     </header>
+
+    <div class="slider clearfix">
+      <a class="slide slide_men" href="#">
+        <div class="slide-description slide-description_big">
+          <span class="slide-description__title slide-description__title_big">
+            Mens' wear
+          </span>
+          <span class="slide-description__text slide-description__text_big">
+            Lorem Ipsum is simply dummy text of the printing and typesetting 
+            industry. Lorem
+          </span> 
+        </div>
+        <div class="slide-description-auxiliary">Lorem Ipsum is simply dummy 
+          text</div>
+      </a>
+      <a class="slide slide_women" href="#">
+        <div class="slide-description slide-description_small">
+          <span class="slide-description__title slide-description__title_small">
+            Women's wear
+          </span>
+          <span class="slide-description__text slide-description__text_small">
+            Lorem Ipsum is simply dummy text of the printing and typesetting
+          </span> 
+        </div>
+      </a>
+      <a class="slide slide_kids" href="#">
+        <div class="slide-description slide-description_small">
+          <span class="slide-description__title slide-description__title_small">
+            Kid's wear
+          </span>
+          <span class="slide-description__text slide-description__text_small">
+            Lorem Ipsum is simply dummy text of the printing and typesetting
+          </span> 
+        </div>
+      </a>
+    </div>
+  </div>
+
+  <div class="rollover">
+    <a class="rollover__title" href="#">Baby shop</a>
+    <a class="rollover__icon rollover__icon_gift" href="#"></a>
+    <a class="rollover__icon rollover__icon_cart" href="#"></a>
+    <span class="rollover__price"><span class="rollover__dollar">$</span>99.
+      <sup class="rollover__cents">00</sup>
+    </span>
   </div>
 
   <script src="script.min.js"></script>
