search form added

--- a/src/index.html
+++ b/src/index.html
@@ -316,8 +316,10 @@
             industry. Lorem
           </span> 
         </div>
+
         <div class="slide-description-auxiliary">Lorem Ipsum is simply dummy 
-          text</div>
+          text
+        </div>
       </a>
       <a class="slide slide_women" href="#">
         <div class="slide-description slide-description_small">
@@ -340,17 +342,23 @@
         </div>
       </a>
     </div>
-  </div>
 
-  <div class="rollover">
-    <a class="rollover__title" href="#">Baby shop</a>
-    <a class="rollover__icon rollover__icon_gift" href="#"></a>
-    <a class="rollover__icon rollover__icon_cart" href="#"></a>
-    <span class="rollover__price"><span class="rollover__dollar">$</span>99.
-      <sup class="rollover__cents">00</sup>
-    </span>
+    <form class="search site-block" action="#" method="GET">
+      <input class="search__field" type="search" 
+        placeholder="Search your product here">
+      <button class="search__button" type="submit"></button>
+    </form>
   </div>
 
   <script src="script.min.js"></script>
 </body>
-</html>       
+</html>
+
+<!--<div class="rollover">
+          <a class="rollover__title" href="#">Baby shop</a>
+          <a class="rollover__icon rollover__icon_gift" href="#"></a>
+          <a class="rollover__icon rollover__icon_cart" href="#"></a>
+          <span class="rollover__price"><span class="rollover__dollar">$</span>99.
+            <sup class="rollover__cents">00</sup>
+          </span>
+        </div>       -->
