jewelry section added

--- a/src/index.html
+++ b/src/index.html
@@ -348,6 +348,13 @@
         placeholder="Search your product here">
       <button class="search__button" type="submit"></button>
     </form>
+
+    <div class="jewelry">
+      <h2 class="jewelry__title">
+        Jewelry
+        <a class="jewelry__link" href="#"></a>  
+      </h2>
+    </div>
   </div>
 
   <script src="script.min.js"></script>
