crafts section added

--- a/src/index.html
+++ b/src/index.html
@@ -349,6 +349,19 @@
       <button class="search__button" type="submit"></button>
     </form>
 
+    <div class="crafts">
+      <div class="controls crafts__controls">
+        <a class="controls__title" href="#">Baby shop</a>
+        <a class="controls__icon controls__icon_gift" href="#" 
+          title="buy as present"></a>
+        <a class="controls__icon controls__icon_cart" href="#" 
+          title="add to cart"></a>
+        <span class="controls__price"><span class="controls__dollar">$</span>99.
+          <sup class="controls__cents">00</sup>
+        </span>
+      </div>
+    </div>
+
     <div class="jewelry">
       <h2 class="jewelry__title">
         Jewelry
@@ -361,11 +374,4 @@
 </body>
 </html>
 
-<!--<div class="rollover">
-          <a class="rollover__title" href="#">Baby shop</a>
-          <a class="rollover__icon rollover__icon_gift" href="#"></a>
-          <a class="rollover__icon rollover__icon_cart" href="#"></a>
-          <span class="rollover__price"><span class="rollover__dollar">$</span>99.
-            <sup class="rollover__cents">00</sup>
-          </span>
-        </div>       -->
+       
