section new products added

--- a/src/index.html
+++ b/src/index.html
@@ -351,7 +351,7 @@
 
     <div class="crafts">
       <div class="controls crafts__controls">
-        <a class="controls__title" href="#">Baby shop</a>
+        <a class="controls__title" href="#">Crafts</a>
         <a class="controls__icon controls__icon_gift" href="#" 
           title="buy as present"></a>
         <a class="controls__icon controls__icon_cart" href="#" 
@@ -368,6 +368,50 @@
         <a class="jewelry__link" href="#"></a>  
       </h2>
     </div>
+
+    <article class="products">
+      <header class="products__header clearfix">
+        <h2 class="products__title">New products</h2>
+        <div class="products__btns">
+          <button class="products__btn products__btn_prev" type="button">
+          </button>
+          <button class="products__btn products__btn_next" type="button">
+          </button>
+        </div>
+      </header>
+      <div class="products__content">
+        <a class="products__product products__product_one" href="#">
+          <div class="products__rollover">
+            <span class="products__rollover-title">Baby shop</span>
+            <button class="products__rollover-btn
+                           products__rollover-btn_gift" type="button"></button>
+            <button class="products__rollover-btn
+                           products__rollover-btn_cart" type="button"></button>
+            <span class="products__rollover-price">$99.00</span>
+          </div>
+        </a>
+        <a class="products__product products__product_two" href="#">
+          <div class="products__rollover">
+            <span class="products__rollover-title">Baby shop</span>
+            <button class="products__rollover-btn
+                           products__rollover-btn_gift" type="button"></button>
+            <button class="products__rollover-btn
+                           products__rollover-btn_cart" type="button"></button>
+            <span class="products__rollover-price">$99.00</span>
+          </div>
+        </a>
+        <a class="products__product products__product_three" href="#">
+          <div class="products__rollover">
+            <span class="products__rollover-title">Baby shop</span>
+            <button class="products__rollover-btn
+                           products__rollover-btn_gift" type="button"></button>
+            <button class="products__rollover-btn
+                           products__rollover-btn_cart" type="button"></button>
+            <span class="products__rollover-price">$99.00</span>
+          </div>
+        </a>
+      </div>
+    </article>
   </div>
 
   <script src="script.min.js"></script>
