--- a/src/index.html
+++ b/src/index.html
@@ -519,6 +519,31 @@
         </div>
       </div>
     </article>
+
+    <section class="company-description">
+      <h2 class="company-description__title">Who we are</h2>
+      <p class="company-description__content">Lorem Ipsum is simply dummy text 
+        of the printing and typesetting industry. Lorem Ipsum has been the 
+        industry's standard dummy text ever since the 1500s, when an unknown 
+        printer took a galley of type and scrambled it to make a type specimen 
+        book. It has survived not only five centuries, but also the leap into 
+        electronic typesetting, remaining essentially unchanged. It was 
+        popularised in the 1960s with the release of Letraset sheets containing 
+        Lorem Ipsum passages, and more recently with desktop publishing software 
+        like Aldus PageMaker including versions of Lorem Ipsum.
+      </p>
+      <div class="company-description__steps">
+        <div class="company-description__step 
+                    company-description__step_choose"></div>
+        <div class="company-description__step
+                    company-description__step_login"></div>
+        <div class="company-description__step
+                    company-description__step_checkout"></div>
+      </div>
+      <button class="company-description__button" type="button">
+        Register now
+      </button>
+    </section>
   </div>
 
   <script src="script.min.js"></script>
