--- a/src/index.html
+++ b/src/index.html
@@ -544,6 +544,131 @@
         Register now
       </button>
     </section>
+
+    <footer class="footer">
+      <div class="footer__top">
+        <section class="footer-section">
+          <h3 class="footer-section__title">Shopping with us</h3>
+          <ul class="footer-section__list">
+            <li class="footer-section__list-item">
+              <a href="" class="footer-section__link">Why shop with us</a>
+            </li>
+            <li class="footer-section__list-item">
+              <a href="" class="footer-section__link">How it works</a>
+            </li>
+            <li class="footer-section__list-item">
+              <a href="" class="footer-section__link">Delivery</a>
+            </li>
+            <li class="footer-section__list-item">
+              <a href="" class="footer-section__link">Returns</a>
+            </li>
+            <li class="footer-section__list-item">
+              <a href="" class="footer-section__link">Where's my order</a>
+            </li>
+            <li class="footer-section__list-item">
+              <a href="" class="footer-section__link">Contact & help</a>
+            </li>
+            <li class="footer-section__list-item">
+              <a href="" class="footer-section__link">Wedding list</a>
+            </li>
+            <li class="footer-section__list-item">
+              <a href="" class="footer-section__link">Wish list</a>
+            </li>
+            <li class="footer-section__list-item">
+              <a href="" class="footer-section__link">Gift vouchers</a>
+            </li>
+          </ul>
+        </section>
+        <section class="footer-section">
+          <h3 class="footer-section__title">About us</h3>
+          <ul class="footer-section__list">
+            <li class="footer-section__list-item">
+              <a href="" class="footer-section__link">Our story</a>
+            </li>
+            <li class="footer-section__list-item">
+              <a href="" class="footer-section__link">Customer contact</a>
+            </li>
+            <li class="footer-section__list-item">
+              <a href="" class="footer-section__link">Awards</a>
+            </li>
+            <li class="footer-section__list-item">
+              <a href="" class="footer-section__link">Press centre</a>
+            </li>
+            <li class="footer-section__list-item">
+              <a href="" class="footer-section__link">Work with us</a>
+            </li>
+            <li class="footer-section__list-item">
+              <a href="" class="footer-section__link">Terms & conditions</a>
+            </li>
+            <li class="footer-section__list-item">
+              <a href="" class="footer-section__link">Privacy & cookies</a>
+            </li>
+          </ul>
+        </section>
+        <section class="footer-section">
+          <h3 class="footer-section__title">Selling with us</h3>
+          <ul class="footer-section__list">
+            <li class="footer-section__list-item">
+              <a href="" class="footer-section__link">Why join?</a>
+            </li>
+            <li class="footer-section__list-item">
+              <a href="" class="footer-section__link">Faqs</a>
+            </li>
+            <li class="footer-section__list-item">
+              <a href="" class="footer-section__link">Apply to sell with us</a>
+            </li>
+            <li class="footer-section__list-item">
+              <a href="" class="footer-section__link">Affiliates</a>
+            </li>
+          </ul>
+        </section>
+        <section class="footer-section">
+          <h3 class="footer-section__title">Signup newsletter</h3>
+          <form  class="footer-section__form" action="#">
+            <input class="footer-section__email-field" type="email" 
+              placeholder="e.g.:abc@domain.com">
+            <button class="footer-section__btn-submit" type="submit">
+              Subscribe now
+            </button>
+          </form>
+          <h3 class="footer-section__title footer-section__title_special">
+            Keep in touch
+          </h3>
+          <ul class="footer-section__socials">
+            <li class="footer-section__socials-item">
+              <a class="footer-section__socials-link 
+                        footer-section__socials-link_rss" href="#"></a>
+            </li>
+            <li class="footer-section__socials-item">
+              <a class="footer-section__socials-link
+                        footer-section__socials-link_fb" href="#"></a>
+            </li>
+            <li class="footer-section__socials-item">
+              <a class="footer-section__socials-link
+                        footer-section__socials-link_tw" href="#"></a>
+            </li>
+            <li class="footer-section__socials-item">
+              <a class="footer-section__socials-link
+                        footer-section__socials-link_flickr" href="#"></a>
+            </li>
+            <li class="footer-section__socials-item">
+              <a class="footer-section__socials-link
+                        footer-section__socials-link_google" href="#"></a>
+            </li>
+          </ul>
+        </section>
+      </div>
+      <div class="footer__bottom clearfix">
+        <span class="footer__copyright">Copyright &copy; 2014 Gift Shop, All 
+          right reserved
+        </span>
+        <span class="footer__signature">Designed by 
+          <span class="footer__signature_name">Amisxain</span>.
+          Marked up by 
+          <span class="footer__signature_name">Alexander Kharchenko</span>
+        </span>
+      </div>
+    </footer>
   </div>
 
   <script src="script.min.js"></script>
